Minor changes to fix display link and adjust notes alignment

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     background-color: #242423;
     display: flex;
     flex-wrap: wrap;
+align-content: flex-start;
     font-family: sans-serif;
     margin: 0;
     padding-top: 3rem;
@@ -20,6 +21,7 @@ body {
     top: 1rem;
     left: 1rem;
     position: fixed;
+    z-index: 1;
 }
 
 .logo a { text-decoration: none; color:#fff; }
@@ -59,6 +61,7 @@ body {
     margin: 20px;
     width: 400px;
     height: 400px;
+    padding-bottom: 40px;
 }
 
 .notes .tools {
@@ -92,7 +95,7 @@ body {
     color: #fff;
     padding: 10px;
     border: none;
-    height: 400px;
+    height: 380px;
     width: 100%;
 }
 
